2004-05-20 TADA Tadashi <sho@spc.gr.jp>
	* mail.rtxt.en: against empty @author_mail or @author_name.

2004-05-19 ZnZ <zn@mbf.nifty.com>
	* 00default.rb, mail.rtxt: against empty @author_mail or @author_name.

2004-05-16 TADA Tadashi <sho@spc.gr.jp>
	* misc/style/wiki/wiki_parser.rb: ignore any elements in plugin.
	* tdiary.conf.sample: add self URL into @no_referer. thanks ZnZ <zn@mbf.nifty.com>.

2004-05-14 TADA Tadashi <sho@spc.gr.jp>
	* skel/mail.rtxt: support absolute path of @conf.index.

2004-05-09 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: support absolute path of @conf.index.
	* skel/i.diary.rhtml: show TSUKKOMI body length 100 to 200 chars.

2004-05-05 TADA Tadashi <sho@spc.gr.jp>
	* misc: move posttdiary.rb and tdiary-mode to contrib package.
	* release 1.5.7.

2004-05-05  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/style/etdiary/etdiary_style.rb: fix a bug that causes a
	problem in 'to_html' without options.

2004-05-04  Kazuhiko  <kazuhiko@fdiary.net>
	* skel/update.rhtml: display an e-mail address of comment if
	exists.

2004-05-04 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: remove to add '...' after using Config#shorten.

2004-04-19 ZnZ <zn@mbf.nifty.com>
	* tdiary.rb: add error information to eval.

2004-04-19 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.conf.sample: uncomment @options['apply_plugin'] and @options['bot'].
	* tdiary.conf.sample: some robots add to @options['bot']. thanks MUSHA <knu@ruby-lang.org>.

2004-04-06 zunda <zunda at freeshell.org>
	* plugin/01sp.rb: records only plug-in filenames. When more than one plug-ins in different directories have the same filename, first occurance in sp.path will be used, without raising an error.

2004-04-05 TADA Tadashi <sho@spc.gr.jp>
	* theme/base.css: add .highlight class. thanks ZnZ <zn@mbf.nifty.com> and Naoko <naoko@ns.undefine.to>.

2004-04-04 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb: apply comment_filter for TrackBack.
	* tdiary/filter/default.rb: reject without GET method in comment_filter.
